# pcl-standalone

./: .gitignore  CMakeLists.txt  README  capture.cpp  capture.h  cloudemitterreceiver.cpp  cloudemitterreceiver.h  globals.h  instanceid.cpp  instanceid.h  main.cpp  pcl-standalone.pro  pclApp.pro  pclviewer.cpp  pclviewer.h  pclviewer.ui  planeextractor.cpp  planeextractor.h
algos/: downsampler.cpp  downsampler.h  planeextractor.cpp  planeextractor.h
algos/ADEVision/: ExtractedPlane.cpp  ExtractedPlane.hpp  PCLFunctions.hpp
